<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/button_Close"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="-4dp"
            android:layout_marginLeft="-5dp"
            />


        <Button
            android:id="@+id/btnApply"
            android:text="@string/button_Apply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-5dp"/>

        <!--android:layout_marginLeft="-5dp"-->
    </LinearLayout>


        <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioFilterOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="0dp">
            </RadioGroup>
            <CheckBox android:id="@+id/checkedDisplaySystemApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_display_systemapps"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"

                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
            <!--android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"-->
    </ScrollView>
</LinearLayout>